# AssortedWidgets

./: .gitmodules  2D_API.md  ARCHITECTURE.md  CMakeLists.txt  Cargo.toml  DRAG_DROP_DEMO.md  EVENT_HANDLING.md  NEXT_PHASE.md  README.md  Z_ORDER.md
.claude/: CLAUDE.md
.github/workflows/: loc.yml
.swm/: document-constructor.hrsjf.sw.md  swimm.json  this-is-a-second-test.8ffy6.sw.md
AssortedWidgets/: AbstractButton.cpp  AbstractButton.h  AllInOneDialog.cpp  AllInOneDialog.h  AssortedWidgets.pro  BorderLayout.cpp  BorderLayout.h  BorderLayoutTestDialog.cpp  BorderLayoutTestDialog.h  BoundingBox.h  Button.cpp  Button.h  CheckButton.cpp  CheckButton.h  CheckNRadioTestDialog.cpp  CheckNRadioTestDialog.h  Component.cpp  Component.h  ContainerElement.h  DefaultTheme.cpp  DefaultTheme.h  Dialog.cpp  Dialog.h  DialogBottom.cpp  DialogBottom.h  DialogBottomLeft.cpp  DialogBottomLeft.h  DialogBottomRight.cpp  DialogBottomRight.h  DialogLeft.cpp  DialogLeft.h  DialogManager.cpp  DialogManager.h  DialogRight.cpp  DialogRight.h  DialogTestDialog.cpp  DialogTestDialog.h  DialogTitleBar.cpp  DialogTitleBar.h  DialogTittleBar.cpp  (+131 more)
assets/: index.html
demo/: AllInOneDialog.cpp  AllInOneDialog.h  BorderLayoutTestDialog.cpp  CheckNRadioTestDialog.cpp  CheckNRadioTestDialog.h  DialogTestDialog.cpp  DialogTestDialog.h  FlowLayoutTestDialog.h  GridLayoutTestDialog.cpp  GridLayoutTestDialog.h  LabelNButtonTestDialog.cpp  LabelNButtonTestDialog.h  MultipleLayoutTestDialog.cpp  MultipleLayoutTestDialog.h  PanelTestDialog.cpp  PanelTestDialog.h  ProgressNSliderTestDialog.cpp  ProgressNSliderTestDialog.h  TextNDropTestDialog.cpp  TextNDropTestDialog.h
docs/: AssortedWidgets.data  AssortedWidgets.js  AssortedWidgets.wasm  MULTITHREADED_RAWSURFACE.md  _config.yml  index.data  index.html  index.js  index.wasm  template.html
docs/_posts/: 2017-04-06-welcome-to-jekyll.markdown
examples/: button_group_demo.rs  button_simple_test.rs  button_test.rs  controls_demo.rs  cube_3d_demo.rs  depth_test.rs  drag_drop_demo.rs  drag_drop_simple.rs  icon_visual_demo.rs  icons_and_images.rs  ime_demo.rs  label_demo.rs  label_minimal.rs  label_simple_test.rs  multi_window_demo.rs  phase1_visual_test.rs  phase3_gradients_test.rs  phase4_paths_test.rs  rich_text_demo.rs  rich_text_test.rs  rounded_rects.rs  scrollbar_demo.rs  scrollbar_simple_test.rs  slider_progressbar.rs  spinner_test.rs  text_area_demo.rs  text_demo.rs  text_input_demo.rs  triangle_demo.rs  z_order_clip_test.rs
icons/: icon_mapping.json
shaders/: cube_3d.wgsl  image.wgsl  path.wgsl  rect.wgsl  rect_sdf.wgsl  shadow_sdf.wgsl  simple_triangle.wgsl  text.wgsl  triangle.wgsl
src/: application.rs  bounds_tree.rs  connection.rs  element.rs  element_manager.rs  event.rs  event_loop.rs  handle.rs  lib.rs  main.rs  main.rs.backup  main.rs.disabled  raw_surface.rs  scene_graph.rs  types.rs  widget.rs  widget_manager.rs  widget_tree.rs  window.rs  window_render_state.rs
src/elements/: animated_rect.rs  animated_text_label.rs  clickable_rect.rs  clipped_container.rs  container.rs  cube_3d.rs  debug_rect.rs  draggable_rect.rs  mod.rs  simple_input_box.rs  simple_triangle.rs  text_demo.rs  text_label.rs  text_test.rs
src/event/: bus.rs  capture.rs  custom.rs  focus.rs  handlers.rs  hit_test.rs  input.rs  mod.rs
src/icon/: embedded.rs  engine.rs  mod.rs
src/image/: cache.rs  mod.rs
src/layout/: manager.rs  mod.rs
src/paint/: batcher.rs  clip.rs  context.rs  gradient.rs  layered_bounds_tree.rs  layers.rs  mod.rs  path.rs  primitives.rs  rect_renderer.rs  types.rs  z_order.rs
src/platform/: mod.rs
src/platform/mac/: mod.rs  window.rs
src/render/: context.rs  image_pipeline.rs  mod.rs  path_pipeline.rs  pipelines.rs  rect_pipeline.rs  rect_sdf_pipeline.rs  shadow_sdf_pipeline.rs  shared_state.rs  text_pipeline.rs  window_renderer.rs
src/text/: atlas.rs  engine.rs  font_system.rs  layout.rs  mod.rs  renderer.rs  style.rs
src/widgets/: button.rs  button_group.rs  checkbox.rs  cursor.rs  label.rs  mod.rs  progressbar.rs  radio_group.rs  scrollable_container.rs  scrollbar.rs  slider.rs  spinner.rs  switch.rs
src/widgets/rich_text_label/: markdown.rs  mod.rs  types.rs  widget.rs
src/widgets/text_area/: mod.rs  style.rs  widget.rs
src/widgets/text_input/: mod.rs  style.rs  widget.rs
