[package]
name = "AssortedWidgets"
version = "0.1.0"
edition = "2021"

[lib]
name = "assorted_widgets"
path = "src/lib.rs"

[[bin]]
name = "assorted_widgets_test"
path = "src/main.rs"

[dependencies]
euclid = { version = "0.22", features = ["serde"] }
wgpu = "23.0"
pollster = "0.3"
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
