[package]
name = "AssortedWidgets"
version = "0.1.0"
edition = "2024"

[lib]
name = "assorted_widgets"
path = "src/lib.rs"

[[example]]
name = "drag_drop_demo"
path = "examples/drag_drop_demo.rs"

[[example]]
name = "rounded_rects"
path = "examples/rounded_rects.rs"

[[example]]
name = "icons_and_images"
path = "examples/icons_and_images.rs"

[dependencies]
euclid = { version = "0.22", features = ["serde"] }
wgpu = "28.0"
pollster = "0.4"
raw-window-handle = "0.6"
taffy = "0.9"
bytemuck = { version = "1.24", features = ["derive"] }
cosmic-text = "0.15.0"
etagere = "0.2.15"
image = "0.25"
lyon = "1.0"
rust-embed = "8.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lru = "0.12"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSWindow", "NSView", "NSEvent", "NSScreen", "NSResponder", "NSTextInputClient"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSDate", "NSRunLoop", "NSGeometry"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }
